WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56212
[chromium] Compositor uses too much texture memory for scrollbars
https://bugs.webkit.org/show_bug.cgi?id=56212
Summary
[chromium] Compositor uses too much texture memory for scrollbars
Adrienne Walker
Reported
2011-03-11 11:45:49 PST
[chromium] Compositor uses too much texture memory for scrollbars
Attachments
Patch
(2.59 KB, patch)
2011-03-11 11:50 PST
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-03-11 11:48:01 PST
When investigating
http://crbug.com/75225
, I noticed that the scrollbar tilers were using way too much memory. Their layers were getting resized far larger than they needed to be.
Adrienne Walker
Comment 2
2011-03-11 11:50:54 PST
Created
attachment 85505
[details]
Patch
James Robinson
Comment 3
2011-03-11 12:10:06 PST
Comment on
attachment 85505
[details]
Patch Cool.
WebKit Commit Bot
Comment 4
2011-03-11 14:50:53 PST
Comment on
attachment 85505
[details]
Patch Clearing flags on attachment: 85505 Committed
r80887
: <
http://trac.webkit.org/changeset/80887
>
WebKit Commit Bot
Comment 5
2011-03-11 14:50:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug