2011-03-11  Adrienne Walker  <enne@google.com>

Reviewed by James Robinson.

        [chromium] Compositor uses too much texture memory for scrollbars
        https://bugs.webkit.org/show_bug.cgi?id=56212

        Compositor invalidations can be off the page (and very large), but
        scrollbars only need to care about the invalidation that's visible.
        The large invalidation was causing the tiler layer size to grow
        needlessly larger than the scrollbar.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::invalidateRootLayerRect):

Canonical link: https://commits.webkit.org/70772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80887 268f45cc-cd09-0410-ab3c-d52691b4dbfc